--- a/sass/responsive.css
+++ b/sass/responsive.css
@@ -50,5 +50,26 @@
         -ms-flex-align: center;
             align-items: center;
   }
+
+  section.content div.lieux > article {
+    width: 90%;
+  }
+
+  section.content div.description > div {
+    width: 80%;
+  }
+
+  section.content div.competences {
+    padding: 0;
+    margin: 1rem 0;
+  }
+  section.content div.competences span {
+    width: 45%;
+    margin: 5px;
+  }
+
+  section.content div.matiere p {
+    width: 25%;
+  }
 }
 /*# sourceMappingURL=responsive.css.map */
