--- a/css/contenu3.css
+++ b/css/contenu3.css
@@ -1,78 +1,63 @@
-.part{
-    height: 45vw;
-    margin: 20px;
+section.content h2 {
+    margin: 1rem 0;
 }
-.competences, .matiere{
-    margin: 20px;
+
+.img-example-edt {
+    width: 90%;
+    margin: 1rem 0;
+}
+
+
+section.content .competences {
     display: flex;
     justify-content: center;
-    align-items: center;
-}
-.competences p, .matiere p{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border: 1px solid rgba(255, 255, 255, 0.4);
-    border-radius: 10px;
-}
-.competences p{
-    position: relative;
-    width: 200px;
-    height: 200px;
-    margin: 20px;
-
-    z-index: 1;
-
-    overflow: hidden;
-    transition: top 1.5s, z-index 1s, transform 1s;
-    transition-delay: 0, 1.5s, 1.5s;
-
-    background-color: var(--secondary-color);
-}
-.competences p:hover{
-    top: -50px;
-    transform: translateY(50px);
-    z-index:11;
-}
-
-.competences span {
-    position: relative;
-}
-
-.competences span > div {
-    position: absolute;
-    top: 55%;
+    flex-wrap: wrap;
 
     width: 100%;
-    height: 50%;
 
-    z-index: 10;
-    
-    border-top: 1px solid rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(5px);
+    padding: 2rem 1rem;
 }
-.competences p::before{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50px;
+section.content .competences span {
+    width: 29%;
+    height: 200px;
+    margin: 1rem;
+}
+section.content .competences span p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255, 0.5);
-    transform: skewX(45deg) translateX(150px);
-    transition: 0.5s;
-    opacity: 0;
+
+    text-align: center;
+    color: var(--complementary-color);
+    font-size: 1.2em;
+
+    box-shadow: 0 0 3px var(--text-color);
+    border-radius: 1rem;
 }
-.competences p:hover::before{
-    transform: skewX(45deg) translateX(-150px);
-    opacity: 1;
+
+
+section.content .matiere {
+    display: flex;
+    flex-wrap: wrap;
 }
-.matiere p{
-    width: 150px;
-    height: 150px;
-    margin: 15px;
+
+section.content .matiere p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 20%;
+    height: 100px;
+
+    margin: 1rem;
+    box-shadow: 0 0 3px var(--text-color);
+    border-radius: 1rem;
+    text-align: center;
 }
-#edt img{
-    width: 1000px;
+
+section.content ul li {
+    margin: 0.5rem 0 0.5rem 20px
 }
