Aria (accesibilité) terminée.

--- a/css/contenu1.css
+++ b/css/contenu1.css
@@ -22,3 +22,8 @@ section.content ul li {
     margin-left: 20px;
     list-style-type:  disclosure-closed;
 }
+
+.iframe-map-iut {
+    width: 100%;
+    min-height: 200px;
+}
