--- a/css/contenu3.css
+++ b/css/contenu3.css
@@ -17,12 +17,12 @@ section.content .competences {
 
     padding: 2rem 1rem;
 }
-section.content .competences span {
+section.content .competences div {
     width: 29%;
     height: 200px;
     margin: 1rem;
 }
-section.content .competences span p {
+section.content .competences div p {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,6 +42,7 @@ section.content .competences span p {
 section.content .matiere {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 section.content .matiere p {
