--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -61,7 +61,7 @@
         padding: 0;
         margin: 1rem 0;
 
-        & span {
+        & div {
             width: 45%;
             margin: 5px;
         }
