--- a/css/footer.css
+++ b/css/footer.css
@@ -22,7 +22,7 @@ footer section span {
     width: 90%;
 
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 footer h1 {
     font-size: 1.7em;
